Updated things after merge much better now

--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,10 +1,10 @@
 <div class = container>
-   <form action = "/users/login" method="POST">
+   <form action = "/users" method="POST">
      <label for = "username"> Username: </label>
      <input type = "text" name = "[user]username" id = username>
-     <label for = "password"> Username: </label>
+     <label for = "password"> Password: </label>
      <input type = "password" name = "[user]password" id = password>
-     <label for = "email"> Username: </label>
+     <label for = "email"> Email: </label>
      <input type = "email" name = "[user]email" id = email>
      <input type="submit" value="Log In">
   </form>
