--- a/app/views/_nav.erb
+++ b/app/views/_nav.erb
@@ -1,17 +1,18 @@
 <% if session[:id] != nil %>
+<% @user = User.find(session[:id]) %>
   <nav>
     <ul>
-      <li><a href="/users/<%= @user.id %>"></a> <%= @user.username %> </li>
-      <li><a href="/"></a> Home </li>
-      <li><a href="/users/logout"></a> Logout </li>
+      <li><a href="/users/<%= @user.id %>"><%= @user.username %></a>  </li>
+      <li><a href="/">Home </a> </li>
+      <li><a href="/users/logout"> Logout</a> </li>
     </ul>
   </nav>
 <% else %>
 <nav>
   <ul>
-    <li><a href="/"></a> Home </li>
-    <li><a href="/users/new"></a> Register </li>
-    <li><a href="/users/login"></a> Login </li>
+    <li><a href="/">Home</a>  </li>
+    <li><a href="/users/new">Register</a>  </li>
+    <li><a href="/users/login">Login</a>  </li>
   </ul>
 </nav>
 <% end %>
