--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,7 +2,7 @@
    <form action = "/users/login" method="POST">
      <label for = "username"> Username: </label>
      <input type = "text" name = "[user]username" id = username>
-     <label for = "password"> Username: </label>
+     <label for = "password"> Password: </label>
      <input type = "text" name = "[user]password" id = password>
      <input type="submit" value="Log In">
   </form>
