--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -1,4 +1,5 @@
-<h1><%= @user.name %>'s Profile</h1>
+<h1><%= @user.username.capitalize %>'s Profile</h1>
+<% @questions = [] %>
 
 <div>
 	<table>
@@ -14,11 +15,14 @@
 			<th>"Question"</th>
 			<th>"Date"</th>
 		</tr>
-		<%= @questions.each do |question| %>
+
+		<% @questions.each do |question| %>
 		<tr>
-			<td><%= @category %></td>
-			<td><%= @question %></td>
-			<td><%= @created_at %></td>
+			<td>"category"</td>
+			<td>"question"</td>
+			<td>"created_at"</td>
 		</tr>
+		<% end %>
+		<% end %>
 	</table>
 </div>
