--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -1,4 +1,4 @@
-<h1><%= #{@user.username} %>'s profile</h1>
+<h1><%= user.username %>'s profile</h1>
 
 <ul id="profile-nav">
   <a href="/">Home</a>
