--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,7 +20,7 @@
       <a href="#" class="main-nav-link"><li class="main-nav-li flex-row"><span>Home</span></li></a>
     </ul>
   </nav>
-
+<!--
   <header role="banner" class="mar-t-5 pad-t-2 pad-b-4 pad-s-1 wrap-float bg-white">
     <div class="max-w-700 center wrap float">
       <nav class="clearfix mar-b-1">
@@ -36,7 +36,7 @@
         </ul>
       </nav>
     </div>
-  </header>
+  </header> -->
   <%= yield %>
 </body>
 </html>
