--- a/public/src/styles.sass
+++ b/public/src/styles.sass
@@ -39,5 +39,9 @@ body
   height: 100%
   padding: 0 20px
 
-
-
+// ========== IV. Legacy ==========
+.pipe-separate
+  padding: 0 20px
+  border-right: solid 1px lightgrey
+.left
+  left: 0
