Adds div containers

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -37,6 +37,8 @@
       </nav>
     </div>
   </header> -->
-  <%= yield %>
+  <div class="main-container flex-column">
+    <%= yield %>
+  </div>
 </body>
 </html>
