--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,7 +3,7 @@
      <label for = "username"> Username: </label>
      <input type = "text" name = "[user]username" id = username>
      <label for = "password"> Password: </label>
-     <input type = "text" name = "[user]password" id = password>
+     <input type = "password" name = "[user]password" id = password>
      <input type="submit" value="Log In">
   </form>
 </div>
