--- a/app/views/_nav.erb
+++ b/app/views/_nav.erb
@@ -3,6 +3,7 @@
   <nav>
     <ul>
       <li><a href="/users/<%= @user.id %>"><%= @user.username %></a>  </li>
+      <li><a href="/questions/new">Ask Question</a> </li>
       <li><a href="/">Home </a> </li>
       <li><a href="/users/logout"> Logout</a> </li>
     </ul>
