Fix formatting, merged in create questions

--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -11,9 +11,9 @@
 		</tr>
 		<% else %>
 		<tr>
-			<th>"Category"</th>
-			<th>"Question"</th>
-			<th>"Date"</th>
+			<th>Category</th>
+			<th>Question</th>
+			<th>Date</th>
 		</tr>
 
 			<% @questions.each do |question| %>
