Adds polymorphic associations and models/migrations for votes/comments

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,14 +13,15 @@
 </head>
 <body>
   <nav class="main-nav flex-row">
-    <h3 class="nav-header font-mdlg">DBC Overflow</h3>
-    <ul class="main-nav-ul flex-row font-md">
+    <h3 class="nav-header font-md">dbc overflow</h3>
+    <ul class="main-nav-ul flex-row font-sm">
       <a href="#" class="main-nav-link"><li class="main-nav-li flex-row"><span>Register</span></li></a>
       <a href="#" class="main-nav-link"><li class="main-nav-li flex-row"><span>Login</span></li></a>
       <a href="#" class="main-nav-link"><li class="main-nav-li flex-row"><span>Home</span></li></a>
+      <button></button>
     </ul>
   </nav>
-<!--
+
   <header role="banner" class="mar-t-5 pad-t-2 pad-b-4 pad-s-1 wrap-float bg-white">
     <div class="max-w-700 center wrap float">
       <nav class="clearfix mar-b-1">
@@ -36,7 +37,7 @@
         </ul>
       </nav>
     </div>
-  </header> -->
+  </header>
   <div class="main-container flex-column">
     <%= yield %>
   </div>
