--- a/public/src/styles.sass
+++ b/public/src/styles.sass
@@ -19,16 +19,16 @@ body
   flex-direction: column
   align-items: center
   justify-content: center
+.font-sm
+  font-size: 1em
 .font-md
-  font-size: 1.2em
-.font-mdlg
   font-size: 2em
 
 // ========== III. Structural Classes ==========
 // ========== a. Navbar ==========
 .main-nav
-  height: 80px
-  background-color: $primary-color
+  height: 70px
+  background-color: lightgray
   justify-content: space-between
   box-shadow: 0px 2px 2px 0px grey
 .nav-header
@@ -44,6 +44,7 @@ body
 .main-nav-li
   height: 100%
   padding: 0 20px
+  transition: background .1s linear
 
 // ========== b. Main Content ==========
 .main-container
