--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -1,7 +1,9 @@
 <h1 class='question-title'><%= @question.title %></h1>
 
-<p class='question-body'><%= @question.body %></p>
-<p><%= @question.user.username %>   -   <%= @question.updated_at %></p>
+<div class='question-content'>
+  <p class='question-body'><%= @question.body %></p>
+  <p class='question-user'><%= @question.user.username %>   -   <%= @question.updated_at %></p>
+</div>
 
 <ul>
   <% @question.comments.each do |comment| %>
@@ -9,13 +11,17 @@
   <% end %>
 </ul>
 
+<h2><%= @question.answers.count %> Answers</h2>
 <% @question.answers.each do |answer| %>
-  <p><%= answer.body %></p>
-  <ul>
-    <% answer.comments.each do |comment| %>
-      <li><%= comment.body %></li>
-    <% end %>
-  </ul>
+  <div class='answer'
+    <p><%= answer.body %></p>
+    <p class='answer-user'><%= answer.user.username %>   -   <%= answer.updated_at%></p>
+    <ul>
+      <% answer.comments.each do |comment| %>
+        <li><%= comment.body %></li>
+      <% end %>
+    </ul>
+  </div>
 <% end %>
 
 <h3><a href='/questions/<%= @question.id.to_s %>/answers/new'>Post Your Answer</a></h3>
