--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -5,7 +5,7 @@
 		<% if @questions.empty? %>
 		<tr>
 			<th>
-				<h2>Got a Question?</h2>
+				<h2><a href='/questions/new'>Got a Question?</a></h2>
 			</th>
 		</tr>
 		<% else %>
