Start search function

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -18,5 +18,6 @@
   <form>
     <label for="search"> What's on your mind?: </label>
     <input type="text" name="search" placeholder="??????">
+    <input type="submit" value="Search">
   </form>
 </div>
