--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,17 +12,19 @@
   <title>DBC Overflow</title>
 </head>
 <body>
-  <nav class="main-nav flex-row">
-    <h3 class="nav-header font-md">dbc overflow</h3>
-    <ul class="main-nav-ul flex-row font-sm">
-      <a href="#" class="main-nav-link"><li class="main-nav-li flex-row"><span>Register</span></li></a>
-      <a href="#" class="main-nav-link"><li class="main-nav-li flex-row"><span>Login</span></li></a>
-      <a href="#" class="main-nav-link"><li class="main-nav-li flex-row"><span>Home</span></li></a>
-      <button></button>
-    </ul>
-  </nav>
+  <header role="banner"
+    <nav class="main-nav flex-row">
+      <h3 class="nav-header font-md">dbc overflow</h3>
+      <ul class="main-nav-ul flex-row font-sm">
+        <a href="/users/new" class="main-nav-link"><li class="main-nav-li flex-row"><span>Register</span></li></a>
+        <a href="/users/login" class="main-nav-link"><li class="main-nav-li flex-row"><span>Login</span></li></a>
+        <a href="/" class="main-nav-link"><li class="main-nav-li flex-row"><span>Home</span></li></a>
+        <button></button>
+      </ul>
+    </nav>
+  </header>
 
-  <header role="banner" class="mar-t-5 pad-t-2 pad-b-4 pad-s-1 wrap-float bg-white">
+  class="mar-t-5 pad-t-2 pad-b-4 pad-s-1 wrap-float bg-white">
     <div class="max-w-700 center wrap float">
       <nav class="clearfix mar-b-1">
         <ul class="no-bullets no-margin no-padding right">
