--- a/app/views/questions/edit.erb
+++ b/app/views/questions/edit.erb
@@ -1,8 +1,8 @@
 <form action="/questions/<%=question.id%>" method="POST" id="questionform">
   <input type="hidden" name="_method" value="PUT">
 <label for="title">Title</label>
-<input type="text" name="title" placeholder="Enter question title">
-<textarea rows="10" cols="50" name="body" form="questionform" placeholder="Enter question here"></textarea>
+<input type="text" name="title" value=<%= question.try(:title) %>>
+<textarea rows="10" cols="50" name="body" form="questionform" ><%= question.try(:body) %></textarea>
 <input type="submit" value="Edit question">
 </form>
 
