Add vote class, and association/routes/view for it

--- a/app/views/categories/show.erb
+++ b/app/views/categories/show.erb
@@ -1,14 +1,20 @@
 <h1 class="category-name"><%= @category.name %></h1>
-
-
-
-
-
 <p class=question-header> Questions about (<%= @category.name %>): </p>
 <div class=question-select>
   <ul>
     <% @category.questions.each do |q| %>
-      <li> <a href="/questions/<%= q.id %>"> <%= q.title %></a></li>
+     <li>
+      <article id = "<% q.id %>">
+      <h3><a href="/questions/<%= q.id %>"> <%= q.title %></a></h3>
+      <form action = "/questions/<%=q.id %>/vote" method = "POST" class= "inline">
+        <button class = "upvote-button" type="submit" name="Upvote!"></button>
+      </form>
+       <span> <%= q.votes.count %> votes || </span>
+       <span> author: <%= q.user.username %> ||</span>
+       <span> <%= q.comments.count %> comments || </span>
+       <a class="delete" href='/questions/<%= q.id %>'>delete this question</a>
+     </article>
+    </li>
     <% end %>
   </ul>
 </div>
