--- a/public/src/styles.sass
+++ b/public/src/styles.sass
@@ -2,14 +2,18 @@
 @import 'reset'
 $primary-font: 'Roboto', sans-serif
 $primary-color: darkgrey
+$orange: #f4b541
+$dark-orange: #f4aa42
 
 // *
 //   border: dashed 1px red
+
+// ========== II. General Tags ==========
 body
   font-family: $primary-font
 
 
-// ========== II. Styling Classes ==========
+// ========== III. Styling Classes ==========
 .flex-row
   display: flex
   align-items: center
@@ -24,7 +28,7 @@ body
 .font-md
   font-size: 2em
 
-// ========== III. Structural Classes ==========
+// ========== IV. Structural Classes ==========
 // ========== a. Navbar ==========
 .main-nav
   height: 70px
@@ -45,6 +49,17 @@ body
   height: 100%
   padding: 0 20px
   transition: background .1s linear
+.question-button
+  background-color: $orange
+  border: solid dimgrey 2px
+  box-shadow: 0 2px 2px 0 darkgrey
+  border-radius: 15px
+  margin-right: 20px
+  padding: 5px
+  transition: background .1s linear
+.question-button:hover
+  background-color: $dark-orange
+
 
 // ========== b. Main Content ==========
 .main-container
@@ -55,7 +70,7 @@ body
   margin: 5% 0
 
 
-// ========== IV. Legacy ==========
+// ========== V. Legacy ==========
 .pipe-separate
   padding: 0 20px
   border-right: solid 1px lightgrey
