--- a/public/css/application.css
+++ b/public/css/application.css
@@ -54,6 +54,18 @@ body {
   padding: 0 20px;
   transition: background 0.1s linear; }
 
+.question-button {
+  background-color: #f4b541;
+  border: solid dimgrey 2px;
+  box-shadow: 0 2px 2px 0 darkgrey;
+  border-radius: 15px;
+  margin-right: 20px;
+  padding: 5px;
+  transition: background 0.1s linear; }
+
+.question-button:hover {
+  background-color: #f4aa42; }
+
 .main-container {
   width: 100%; }
 
