Adds question information to home page

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -72,7 +72,29 @@ body {
 .sub-container {
   max-width: 960px;
   width: 80%;
-  margin: 5% 0; }
+  margin: 20px 0; }
+
+.question-data-stats {
+  background-color: silver;
+  display: inline-block;
+  padding: 5px;
+  box-sizing: border-box;
+  text-align: center; }
+
+.home-questions-li {
+  align-items: center;
+  border-top: solid 1px silver;
+  display: flex;
+  padding: 10px 0; }
+
+.home-questions-right {
+  margin-left: 15px; }
+
+.question-link {
+  color: steelblue; }
+
+.question-link:hover {
+  color: lightsteelblue; }
 
 .pipe-separate {
   padding: 0 20px;
