--- a/public/src/styles.sass
+++ b/public/src/styles.sass
@@ -62,12 +62,34 @@ body
 
 
 // ========== b. Main Content ==========
+
+// a. Universal
 .main-container
   width: 100%
 .sub-container
   max-width: 960px
   width: 80%
-  margin: 5% 0
+  margin: 20px 0
+
+// b. Questions - Index
+.question-data-stats
+  background-color: silver
+  display: inline-block
+  padding: 5px
+  box-sizing: border-box
+  text-align: center
+.home-questions-li
+  align-items: center
+  border-top: solid 1px silver
+  display: flex
+  padding: 10px 0
+.home-questions-right
+  margin-left: 15px
+.question-link
+  color: steelblue
+.question-link:hover
+  color: lightsteelblue
+
 
 
 // ========== V. Legacy ==========
