Adds answer rendering and response form on comment page, questions asked to profile page

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,7 +18,7 @@
       <h3 class="nav-header font-md">dbc overflow</h3>
       <ul class="main-nav-ul flex-row font-sm">
         <% if logged_in? %>
-          <a href="/users/<%= session[:id] %>" class="main-nav-link"><li class="main-nav-li flex-row">Profile</li></a>
+          <a href="/users/<%= session[:id] %>" class="main-nav-link"><li class="main-nav-li flex-row"><%= User.find(session[:id]).username %></li></a>
           <a href="/users/logout" class="main-nav-link"><li class="main-nav-li flex-row">Logout</li></a>
         <% else %>
           <a href="/users/new" class="main-nav-link"><li class="main-nav-li flex-row"><span>Register</span></li></a>
