--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -1,6 +1,12 @@
-<h1><%= user.username %>'s profile</h1>
+<div class="sub-container flex-column">
 
-<ul id="profile-nav">
-  <a href="/">Home</a>
-  <a href="/users/logout">Log Out</a>
-</ul>
+  <h1><%= user.username %>'s profile</h1>
+  <h2>Questions asked by <%= user.username %>:</h2>
+
+  <% if user.questions %>
+    <% user.questions.each do |question| %>
+      <p><a class="question-link" href="/questions/#{question.id}"><%= question.title %></a></p>
+    <% end %>
+  <% end %>
+
+</div>
