--- a/public/css/application.css
+++ b/public/css/application.css
@@ -12,6 +12,11 @@ a {
 body {
   font-family: "Roboto", sans-serif; }
 
+p {
+  font-size: 1.1em;
+  letter-spacing: 0.02em;
+  line-height: 1.4em; }
+
 .flex-row {
   display: flex;
   align-items: center;
@@ -70,12 +75,12 @@ body {
   width: 100%; }
 
 .sub-container {
-  max-width: 960px;
+  max-width: 900px;
   width: 80%;
   margin: 20px 0; }
 
 .question-data-stats {
-  background-color: silver;
+  background-color: whitesmoke;
   display: inline-block;
   padding: 5px;
   box-sizing: border-box;
@@ -95,6 +100,17 @@ body {
 
 .question-link:hover {
   color: lightsteelblue; }
+
+.questioner-buttons {
+  display: inline-block; }
+
+.answer-form {
+  width: 100%;
+  align-items: flex-start; }
+
+.body-textarea {
+  width: 100%;
+  height: 300px; }
 
 .pipe-separate {
   padding: 0 20px;
