--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -25,7 +25,7 @@
 		<% end %>
 	</table>
 	<table>
-		<% if @answers %>
+		<% if !@answers.empty? %>
 		<tr>
 			<th>Questions Answered</th>
 			<th>Date</th>
@@ -34,6 +34,26 @@
 			<tr>
 				<td><a href='/questions/<%= answer.question.id %>'><%= answer.question.title %></a></td>
 				<td><%= answer.created_at %></td>
+			</tr>
+			<% end %>
+		<% end %>
+	</table>
+	<table>
+		<% if !@question_comments.empty? || !@answer_comments.empty? %>
+		<tr>
+			<th>Comments</th>
+			<th>Date</th>
+		</tr>
+			<% @question_comments.each do |comment| %>
+			<tr>
+				<td><a href='/questions/<%= comment.commentable.id %>'><%= comment.commentable.title %></a></td>
+				<td><%= comment.created_at %></td>
+			</tr>
+			<% end %>
+			<% @answer_comments.each do |comment| %>
+			<tr>
+				<td><a href='/questions/<%= comment.commentable.id %>'><%= comment.commentable.question.title %></a></td>
+				<td><%= comment.created_at %></td>
 			</tr>
 			<% end %>
 		<% end %>
