--- a/public/css/application.css
+++ b/public/css/application.css
@@ -25,6 +25,7 @@
 
 .inline {
   display: inline;
+  margin-left: 20px;
 }
 
 
@@ -34,11 +35,6 @@
 
 .question-content {
   margin-left: 20px;
-}
-
-.question-user {
-  margin-right: 20px;
-  text-align: right;
 }
 
 .answer {
