--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,9 +1,9 @@
 <div class = container>
-   <form action = "/users/login" method="POST">
+   <form class="form-inline" action = "/users/login" method="POST">
      <label for = "username"> Username: </label>
-     <input type = "text" name = "[user]username" id = username>
+     <input class="form-control" type = "text" name = "[user]username" id = username>
      <label for = "password"> Password: </label>
-     <input type = "password" name = "[user]password" id = password>
-     <input type="submit" value="Log In">
+     <input class="form-control" type = "password" name = "[user]password" id = password>
+     <button type="submit" class="btn btn-primary btn-sm">Login </button>
   </form>
 </div>
