--- a/app/views/_nav.erb
+++ b/app/views/_nav.erb
@@ -1,8 +1,8 @@
 <% if session[:id] != nil %>
 <% @user = User.find(session[:id]) %>
   <nav>
-    <ul>
-      <li><a href="/users/<%= @user.id %>"><%= @user.username %></a>  </li>
+    <ul class="list-inline">
+      <li><a href="/users/<%= @user.id %>"><%= @user.username.capitalize %></a>  </li>
       <li><a href="/questions/new">Ask Question</a> </li>
       <li><a href="/">Home </a> </li>
       <li><a href="/users/logout"> Logout</a> </li>
@@ -10,7 +10,7 @@
   </nav>
 <% else %>
 <nav>
-  <ul>
+  <ul class="list-inline">
     <li><a href="/">Home</a>  </li>
     <li><a href="/users/new">Register</a>  </li>
     <li><a href="/users/login">Login</a>  </li>
