--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,11 +1,15 @@
 <div class = container>
-   <form action = "/users" method="POST">
+   <form action = "/users" class="form-inline" method="POST">
+    <div class="form-group">
      <label for = "username"> Username: </label>
-     <input type = "text" name = "[user]username" id = username>
+     <input class="form-control" type = "text" name = "[user]username" id = username>
+   </div>
+   <div class="form-group">
      <label for = "password"> Password: </label>
-     <input type = "password" name = "[user]password" id = password>
+     <input class="form-control" type = "password" name = "[user]password" id = password>
      <label for = "email"> Email: </label>
-     <input type = "email" name = "[user]email" id = email>
-     <input type="submit" value="Log In">
+  </div>
+     <input class="form-control" type = "email" name = "[user]email" id = email>
+     <button type="submit" class="btn btn-primary btn-sm">Register</button>
   </form>
 </div>
