Fix search bar formatting

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,7 +3,7 @@
 
 
 
-<h3 class=choose> Choose your category (or search below): </h3>
+<h3 class=choose> Choose your category (or search below): </h3> </br>
 
 <div class=category-select>
   <ul>
@@ -13,7 +13,7 @@
   </ul>
 </div>
 
-
+</br>
 <div class="search-form">
   <form>
     <label for="search"> What's on your mind?: </label>
