Comment forms now AJAX'd. Need to refactor. Badly.

--- a/app/views/comments/answernew.erb
+++ b/app/views/comments/answernew.erb
@@ -1,6 +1,3 @@
 <h3><%= @answer.body %></h3>
 
-<form action="/questions/<%= @question.id %>/answers/<%= @answer.id %>/comments" method="POST">
-  <textarea rows="3" cols="40" name="body" placeholder="Enter comment..."></textarea>
-  <input type="submit">
-</form>
+<%= erb :'_answercomment', layout: false, locals: {answer: @answer, comment: @comment} %>
