--- a/public/css/application.css
+++ b/public/css/application.css
@@ -69,4 +69,11 @@ body {
 .left {
   left: 0; }
 
+#question-comment-form {
+  display: none;
+}
+
+.answer-comment-form {
+  display: none;
+}
 /*# sourceMappingURL=application.css.map */
