--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -16,18 +16,27 @@
     <% end %>
   </ul>
   <a href="/questions/<%= question.id %>/answers/new">Answer this question</a>
-  <a href="/questions/<%= question.id %>/comments/new">Comment on this question</a>
+  <a id="question-comment-link" href="/questions/<%= question.id %>/comments/new">Comment on this question</a>
+  <form id="question-comment-form" action="/questions/<%= question.id %>/comments" method="POST">
+  <textarea rows="3" cols="40" name="body" placeholder="Enter comment..."></textarea>
+  <input type="submit">
+</form>
   </br></br>
   <ul>
     <% question.answers.each do |answer| %>
       <li><%= erb :'answers/_show', locals: {question: question, answer: answer} %></li></br>
-        <ul>
+        <ul id="answer-comment-ul">
           <% answer.comments.each do |comment| %>
             <li><%= comment.body %> - <%= (User.find(session[:id])).username %></li>
           <% end %>
         </ul>
-      <a href="/questions/<%= question.id %>/answers/<%= answer.id %>/comments/new">Comment on this answer</a>
-
+      <div>
+      <a id="answer-comment-link" href="/questions/<%= question.id %>/answers/<%= answer.id %>/comments/new">Comment on this answer</a>
+              <form class="answer-comment-form" action="/questions/<%= question.id %>/answers/<%= answer.id %>/comments" method="POST">
+        <textarea rows="3" cols="40" name="body" placeholder="Enter comment..."></textarea>
+        <input type="submit">
+      </form>
+      </div>
     <% end %>
   </ul>
 </div>
