--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -1,28 +1,36 @@
 <div class="sub-container">
   <h1><%= question.title %></h1>
+
   <% if session[:id] == question.questioner_id %>
-  <form action="<%=question.id%>/edit">
-    <input type="submit" value="Edit Question"/>
-  </form>
-  <form action="/questions/<%=question.id%>" method="POST" id="questionform">
-  <input type="hidden" name="_method" value="DELETE">
-  <input type="submit" value="Delete question">
-  </form>
+    <form action="<%=question.id%>/edit">
+      <input type="submit" value="Edit Question"/>
+    </form>
+
+    <form action="/questions/<%=question.id%>" method="POST" id="questionform">
+      <input type="hidden" name="_method" value="DELETE">
+      <input type="submit" value="Delete question">
+    </form>
   <% end %>
+
   <p><%= question.body %></p>
+
   <ul id="question-comment-ul">
     <% question.comments.each do |comment| %>
       <li><%= comment.body %></li>
     <% end %>
   </ul>
+
   <a href="/questions/<%= question.id %>/answers/new">Answer this question</a>
   <a id="question-comment-link" href="/questions/<%= question.id %>/comments/new">Comment on this question</a>
+
   <form id="question-comment-form" action="/questions/<%= question.id %>/comments" method="POST">
-  <textarea rows="3" cols="40" name="body" placeholder="Enter comment..."></textarea>
-  <input type="submit">
-</form>
+    <textarea rows="3" cols="40" name="body" placeholder="Enter comment..."></textarea>
+    <input type="submit">
+  </form>
+
   </br></br>
-  <ul>
+
+  <ul class="question-answers">
     <% question.answers.each do |answer| %>
       <li><%= erb :'answers/_show', locals: {question: question, answer: answer} %></li></br>
         <ul id="answer-comment-ul">
@@ -31,11 +39,11 @@
           <% end %>
         </ul>
       <div>
-      <a id="answer-comment-link" href="/questions/<%= question.id %>/answers/<%= answer.id %>/comments/new">Comment on this answer</a>
-              <form class="answer-comment-form" action="/questions/<%= question.id %>/answers/<%= answer.id %>/comments" method="POST">
-        <textarea rows="3" cols="40" name="body" placeholder="Enter comment..."></textarea>
-        <input type="submit">
-      </form>
+        <a id="answer-comment-link" href="/questions/<%= question.id %>/answers/<%= answer.id %>/comments/new">Comment on this answer</a>
+        <form class="answer-comment-form" action="/questions/<%= question.id %>/answers/<%= answer.id %>/comments" method="POST">
+          <textarea rows="3" cols="40" name="body" placeholder="Enter comment..."></textarea>
+          <input type="submit">
+        </form>
       </div>
     <% end %>
   </ul>
