--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -5,15 +5,16 @@
   <p class='question-body'><%= @question.body %></p>
   <p class='question-user'><%= @question.user.username %>   -   <%= @question.updated_at %></p>
 </div>
+<article id = "<%= @question.id %>">
   <form action = "/questions/<%= @question.id %>/vote" method = "POST" class= "inline">
     <button class = "upvote-button" type="submit" name="Upvote!"></button>
  </form>
-   <span> <%= @question.votes.count %> votes || </span>
+   <span class="count"> <%= @question.votes.count %> votes || </span>
    <span> author: <%= @question.user.username %> ||</span>
    <span> <%= @question.comments.count %> comments || </span>
    <a class="delete" href='/questions/<%= @question.id %>'>delete this question</a>
 <p class='question-body'><%= @question.body %></p>
-
+</article>
 
 <ul>
   <% @question.comments.each do |comment| %>
