--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -52,7 +52,7 @@
 			<% end %>
 			<% @answer_comments.each do |comment| %>
 			<tr>
-				<td><a href='/questions/<%= comment.commentable.id %>'><%= comment.commentable.question.title %></a></td>
+				<td><a href='/questions/<%= comment.commentable.question_id %>'><%= comment.commentable.question.title %></a></td>
 				<td><%= comment.created_at %></td>
 			</tr>
 			<% end %>
