--- a/public/src/styles.sass
+++ b/public/src/styles.sass
@@ -18,45 +18,49 @@ p
 
 // ========== III. Styling Classes ==========
 .flex-row
-  display: flex
   align-items: center
+  display: flex
   justify-content: center
 .flex-column
+  align-items: center
   display: flex
   flex-direction: column
-  align-items: center
   justify-content: center
 .font-sm
   font-size: 1em
 .font-md
   font-size: 2em
+.full-width
+  width: 100%
+.full-height
+  height: 100%
 
 // ========== IV. Structural Classes ==========
 // ========== a. Navbar ==========
 .main-nav
-  height: 70px
   background-color: lightgray
-  justify-content: space-between
   box-shadow: 0px 2px 2px 0px grey
+  height: 70px
+  justify-content: space-between
 .nav-header
   margin-left: 20px
 .main-nav-ul
-  height: 100%
+  @extend .full-height
 .main-nav-link
+  @extend .full-width
   display: inline-block
   height: 100%
-  width: 100%
 .main-nav-li:hover
   background-color: silver
 .main-nav-li
-  height: 100%
+  @extend .full-height
   padding: 0 20px
   transition: background .1s linear
 .question-button
   background-color: $orange
+  border-radius: 15px
   border: solid dimgrey 2px
   box-shadow: 0 2px 2px 0 darkgrey
-  border-radius: 15px
   margin-right: 20px
   padding: 5px
   transition: background .1s linear
@@ -67,18 +71,18 @@ p
 // ========== b. Main Content ==========
 // a. Universal
 .main-container
-  width: 100%
+  @extend .full-width
 .sub-container
+  margin: 20px 0
   max-width: 900px
   width: 80%
-  margin: 20px 0
 
 // b. Questions - Index
 .question-data-stats
   background-color: whitesmoke
+  box-sizing: border-box
   display: inline-block
   padding: 5px
-  box-sizing: border-box
   text-align: center
 .home-questions-li
   align-items: center
@@ -96,12 +100,10 @@ p
 .questioner-buttons
   display: inline-block
 .answer-form
-  width: 100%
   align-items: flex-start
 .body-textarea
-  width: 100%
+  @extend .full-width
   height: 300px
-
 
 
 // ========== V. Legacy ==========
