--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -15,9 +15,9 @@
 
 
 <div class="search-form">
-  <form>
+  <form action="/search" method="post">
     <label for="search"> What's on your mind?: </label>
-    <input type="text" name="search" placeholder="??????">
+    <input type="text" name="search" placeholder="Place a search here">
     <input type="submit" value="Search">
   </form>
 </div>
