--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -2,13 +2,12 @@
   <form id="upvote" method="post" action='/questions/<%= question.id %>/vote'>
     <button type="submit" name="submit_param" value="submit_value"></button>
   </form>
-
+    <div class="votes"><%= question.points %></div>
   <form id="downvote" method="post" action='/questions/<%= question.id %>/downvote'>
     <button type="submit" name="submit_param" value="submit_value"></button>
   </form>
 <% end %>
-  <div class="votes"><%= question.points %></div>
-  <div>votes</div>
+
 <div class="sub-container">
   <h1><%= question.title %></h1>
 
@@ -24,6 +23,21 @@
 
   <p><%= question.body %></p>
 
+  <ul id="question-comment-ul">
+    <% question.comments.each do |comment| %>
+      <% if logged_in? %>
+        <form id="upvote" method="post" action='/questions/<%= question.id %>/comments/<%= comment.id %>/vote'>
+          <button type="submit" name="submit_param" value="submit_value"></button>
+        </form>
+          <div class="votes"><%= comment.points %></div>
+        <form id="downvote" method="post" action='/questions/<%= question.id %>/comments/<%= comment.id %>/downvote'>
+          <button type="submit" name="submit_param" value="submit_value"></button>
+        </form>
+      <% end %>
+      <li><%= comment.body %></li>
+    <% end %>
+  </ul>
+
   <h2>Answers</h2>
 
   <div class="flex-column">
@@ -33,12 +47,6 @@
       <input type="submit" value="Respond">
     </form>
   </div>
-  
-  <ul id="question-comment-ul">
-    <% question.comments.each do |comment| %>
-      <li><%= comment.body %></li>
-    <% end %>
-  </ul>
 
   <a href="/questions/<%= question.id %>/answers/new">Answer this question</a>
   <a id="question-comment-link" href="/questions/<%= question.id %>/comments/new">Comment on this question</a>
@@ -55,6 +63,15 @@
       <li><%= erb :'answers/_show', locals: {question: question, answer: answer} %></li></br>
         <ul id="answer-comment-ul">
           <% answer.comments.each do |comment| %>
+            <% if logged_in? %>
+                <form id="upvote" method="post" action='/questions/<%= answer.question_id %>/answers/<%= answer.id %>/comments/<%= comment.id %>/vote'>
+                  <button type="submit" name="submit_param" value="submit_value"></button>
+                 </form>
+                  <div class="votes"><%= comment.points %></div>
+                <form id="downvote" method="post" action='/questions/<%= answer.question_id %>/answers/<%= answer.id %>/comments/<%= comment.id %>/downvote'>
+                  <button type="submit" name="submit_param" value="submit_value"></button>
+                </form>
+            <% end %>
             <li><%= comment.body %> - <%= (User.find(session[:id])).username %></li>
           <% end %>
         </ul>
