edit/delete with error messages

--- a/app/views/_navin.erb
+++ b/app/views/_navin.erb
@@ -14,7 +14,7 @@
       <li class="nav-li"><a href="/">Home</a></li>
       <li class="nav-li"><a href="/users/new">Create Account</a></li>
       <li class="nav-li"><a href="/users/login">Log In</a></li>
-      <li class="nav-li"><a href="/users/login">Ask a question</a></li>
+      <!-- <li class="nav-li"><a href="/users/login">Ask a question</a></li> -->
     </ul>
   <% end %>
 </nav>
